--- a/_includes/fetch_google_scholar_stats.html
+++ b/_includes/fetch_google_scholar_stats.html
@@ -12,7 +12,8 @@
             for (var i=0; i<3; i++) {
                 interests += data['interests'][i]
             }
-            document.getElementById('interests').innerHTML = data['interests'];
+            document.getElementById('interests').innerHTML = data['interests']
+            document.getElementById('interests').href="//www.runoob.com";
             var citationEles = document.getElementsByClassName('show_paper_citations')
             Array.prototype.forEach.call(citationEles, element => {
                 var paperId = element.getAttribute('data')
