--- a/_includes/fetch_google_scholar_stats.html
+++ b/_includes/fetch_google_scholar_stats.html
@@ -13,7 +13,7 @@
                 interests += data['interests'][i]
             }
             document.getElementById('interests').innerHTML = data['interests']
-            document.getElementById('interests').href="//www.runoob.com";
+            document.getElementById('interests').href="https://www.runoob.com";
             var citationEles = document.getElementsByClassName('show_paper_citations')
             Array.prototype.forEach.call(citationEles, element => {
                 var paperId = element.getAttribute('data')
