--- a/_includes/fetch_google_scholar_stats.html
+++ b/_includes/fetch_google_scholar_stats.html
@@ -39,7 +39,7 @@
             for (var i=0; i<data['interests'].length; i++) {
                 interests += data['interests'][i] + ', '
             }
-            document.getElementById('interests').innerHTML = interests
+            document.getElementById('interests').innerHTML = data['interests']
             document.getElementById('interests').href="https://www.runoob.com";
 
             // scholar_url
