--- a/_includes/fetch_google_scholar_stats.html
+++ b/_includes/fetch_google_scholar_stats.html
@@ -8,7 +8,7 @@
         $.getJSON(gsDataBaseUrl + "google-scholar-stats/gs_data.json", function (data) {
             // total citations
             var totalCitation = data['citedby']
-            document.getElementById('total_cit').innerHTML = data['interests'];
+            document.getElementById('total_cit').innerHTML = data['interests'].length;
 
             // // recent 5years citations
             // var fiveyearCitation = data['citedby5y']
