--- a/_includes/fetch_google_scholar_stats.html
+++ b/_includes/fetch_google_scholar_stats.html
@@ -53,7 +53,7 @@
             var citationEles = document.getElementsByClassName('show_paper_citations')
             Array.prototype.forEach.call(citationEles, element => {
                 var paperId = element.getAttribute('data')
-                var numCitations = data['publications'][paperId]['num_citations'].toString()
+                var numCitations = data['publications'][paperId]['num_citations']
                 element.innerHTML = '| Citations: ' + numCitations;
             });
 
