--- a/_includes/fetch_google_scholar_stats.html
+++ b/_includes/fetch_google_scholar_stats.html
@@ -39,10 +39,8 @@
             for (var i=0; i<data['interests'].length; i++) {
                 my_interests += data['interests'][i] + ', '
             }
-            Array.prototype.forEach.call(document.getElementById('my_interests'), element => {
-                element.innerHTML = my_interests
-                element.href="https://www.runoob.com";
-            });
+            document.getElementById('my_interests').innerHTML = my_interests
+            document.getElementById('my_interests').href="https://www.runoob.com";
 
             // scholar_url
             var scholar_url = document.getElementsByClassName('scholar_url')
