--- a/_includes/fetch_google_scholar_stats.html
+++ b/_includes/fetch_google_scholar_stats.html
@@ -35,12 +35,12 @@
             // document.getElementById('cites_per_year').innerHTML = cites_per_year;
 
             // interests
-            var my_interests = ''
-            for (var i=0; i<data['interests'].length; i++) {
-                my_interests += data['interests'][i] + ', '
-            }
-            document.getElementById('my_interests').innerHTML = my_interests
-            document.getElementById('my_interests').href="https://www.runoob.com";
+            // var my_interests = ''
+            // for (var i=0; i<data['interests'].length; i++) {
+            //     my_interests += data['interests'][i] + ', '
+            // }
+            // document.getElementById('my_interests').innerHTML = my_interests
+            // document.getElementById('my_interests').href="https://www.runoob.com";
 
             // scholar_url
             var scholar_url = document.getElementsByClassName('scholar_url')
