--- a/_includes/fetch_google_scholar_stats.html
+++ b/_includes/fetch_google_scholar_stats.html
@@ -66,15 +66,15 @@
             });
 
             // publication author
-            var authorEles = document.getElementsByClassName('paper_author');
-            Array.prototype.forEach.call(authorEles, element => {
-                var paperId = element.getAttribute('data');
-                var author = data['publications'][paperId]['bib']['author'].replace(/ and/gi, ","); // global, case-insensitive
-                // highlight author
-                var RegExp = /(Song )?Maojia( Song)?/gi;
-                author = author.replace(RegExp, '<strong>Maojia Song</strong>')
-                element.innerHTML = author;
-            });
+            // var authorEles = document.getElementsByClassName('paper_author');
+            // Array.prototype.forEach.call(authorEles, element => {
+            //     var paperId = element.getAttribute('data');
+            //     var author = data['publications'][paperId]['bib']['author'].replace(/ and/gi, ","); // global, case-insensitive
+            //     // highlight author
+            //     var RegExp = /(Song )?Maojia( Song)?/gi;
+            //     author = author.replace(RegExp, '<strong>Maojia Song</strong>')
+            //     element.innerHTML = author;
+            // });
 
             // publication conference
             var conferenceEles = document.getElementsByClassName('paper_conference');
